# codanna

./: Cargo.toml
.claude/: settings.local.json
contributing/parsers/c/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  TREE_STRUCT.md  node_discovery.txt
contributing/parsers/cpp/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  TREE_STRUCT.md  node_discovery.txt
contributing/parsers/csharp/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/gdscript/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/go/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  TREE_STRUCT.md  node_discovery.txt
contributing/parsers/kotlin/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/php/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md
contributing/parsers/python/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/rust/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/typescript/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
docs/: tantivy-error-log.md  tantivy-io-error-fix.md  win-compatibility-fix.md
docs-ja/: README_md-da39a3ee-translation.md  win-compatibility-fix_md-da39a3ee-translation.md
docs-ja/advanced/: README_md-e6285436-translation.md  performance_md-e6285436-translation.md  project-resolution_md-e6285436-translation.md  slash-commands_md-e6285436-translation.md  unix-piping_md-e6285436-translation.md
docs-ja/architecture/: README_md-f380cbcd-translation.md  embedding-model_md-f380cbcd-translation.md  how-it-works_md-f380cbcd-translation.md  language-support_md-f380cbcd-translation.md  memory-mapping_md-f380cbcd-translation.md
docs-ja/contributing/: README_md-87503d48-translation.md
docs-ja/getting-started/: README_md-6b2d3594-translation.md  first-index_md-6b2d3594-translation.md  installation_md-6b2d3594-translation.md  quick-start_md-6b2d3594-translation.md
docs-ja/integrations/: README_md-a2e1a877-translation.md  agent-guidance_md-a2e1a877-translation.md  claude-code_md-a2e1a877-translation.md  claude-desktop_md-a2e1a877-translation.md  codex-cli_md-a2e1a877-translation.md  http-server_md-a2e1a877-translation.md  https-setup_md-a2e1a877-translation.md
docs-ja/plugins/: README_md-440c3339-translation.md
docs-ja/profiles/: README_md-b2cf5805-translation.md
docs-ja/reference/: README_md-02ab610f-translation.md
docs-ja/user-guide/: README_md-a8eafcf6-translation.md  cli-reference_md-a8eafcf6-translation.md  configuration_md-a8eafcf6-translation.md  mcp-tools_md-a8eafcf6-translation.md  search-guide_md-a8eafcf6-translation.md
docs/review/src/: config_rs-da39a3ee-analysis.md  error_rs-da39a3ee-analysis.md  init_rs-da39a3ee-analysis.md  lib_rs-da39a3ee-analysis.md  main_rs-da39a3ee-analysis.md  retrieve_rs-da39a3ee-analysis.md
docs/review/src/display/: help_rs-59b18907-analysis.md  mod_rs-59b18907-analysis.md  progress_rs-59b18907-analysis.md  tables_rs-59b18907-analysis.md  theme_rs-59b18907-analysis.md
docs/review/tests/: cli_tests_rs-da39a3ee-analysis.md  exploration_tests_rs-da39a3ee-analysis.md  integration_tests_rs-da39a3ee-analysis.md  parsers_tests_rs-da39a3ee-analysis.md  plugins_tests_rs-da39a3ee-analysis.md  profiles_tests_rs-da39a3ee-analysis.md  tui_tests_rs-da39a3ee-analysis.md
src/: config.rs  error.rs  init.rs  lib.rs  retrieve.rs
src/display/: mod.rs
src/indexing/: mod.rs  retry.rs
src/io/: mod.rs
src/mcp/: mod.rs
src/parsing/: mod.rs
src/plugins/: mod.rs
src/profiles/: mod.rs
src/project_resolver/: mod.rs
src/relationship/: mod.rs
src/semantic/: mod.rs
src/storage/: mod.rs  tantivy.rs
src/symbol/: mod.rs
src/types/: mod.rs
src/vector/: mod.rs
tests/: heap_size_regression.rs
tests/helpers/: av_simulator.rs  mod.rs
(+242 files in other folders)
